--- a/Source/SizeOnDisk/MainWindow.xaml
+++ b/Source/SizeOnDisk/MainWindow.xaml
@@ -126,7 +126,7 @@
         <TextBox Grid.Row="1" Text="{Binding SelectedListItem.Path,Mode=OneWay}" IsReadOnlyCaretVisible="True" IsReadOnly="True" />
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="250" />
+                <ColumnDefinition Width="275" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
@@ -181,8 +181,7 @@
                 </ListView.Resources>
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <!--cmd:VirtualizingWrapPanel ItemHeight="152" ItemWidth="120" /-->
-                        <WrapPanel/>
+                        <cmd:VirtualizingWrapPanel ItemHeight="152" ItemWidth="120" />
                     </ItemsPanelTemplate>
                 </ListView.ItemsPanel>
                 <ListBox.ItemTemplate>
@@ -202,6 +201,7 @@
                 </ListBox.ItemTemplate>
             </ListView>
             <DataGrid 
+                Name="Listing"
                     Grid.Column="2"
                     VirtualizingStackPanel.VirtualizationMode="Standard"
                     cmd:SelectorBehavior.IsBroughtIntoViewWhenSelected="True"
