--- a/Source/SizeOnDisk/Themes/default.xaml
+++ b/Source/SizeOnDisk/Themes/default.xaml
@@ -1,4 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="LightGray" />
+    <Style TargetType="Window">
+        <Setter Property="UseLayoutRounding" Value="True" />
+        <Setter Property="Background" Value="Blue" />
+    </Style>
 </ResourceDictionary>
