--- a/Source/SizeOnDisk/MainWindow.xaml
+++ b/Source/SizeOnDisk/MainWindow.xaml
@@ -119,7 +119,7 @@
                    Grid.Row="3">
             <StatusBar.Resources>
                 <Style x:Key="{x:Type StatusBarItem}" TargetType="StatusBarItem">
-                    <Setter Property="Padding" Value="3,2" />
+                    <Setter Property="Padding" Value="3,1,3,2" />
                 </Style>
             </StatusBar.Resources>
             <StatusBar.ItemsPanel>
@@ -215,9 +215,9 @@
         <TabControl ItemsSource="{Binding Folders}" SelectedItem="{Binding SelectedRootFolder}" Margin="1">
             <TabControl.ItemTemplate>
                 <DataTemplate>
-                    <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-6,0">
-                        <TextBlock Name="Textbox" Margin="3,1" Panel.ZIndex="42" Text="{Binding Name}" ToolTip="{Binding Path}" MinWidth="60" TextAlignment="Center" />
-                        <ProgressBar Background="Transparent" IsIndeterminate="{Binding ExecutionState, Converter={StaticResource IsRunningConverter}}" BorderThickness="0" />
+                    <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-7,-2">
+                        <TextBlock Name="Textbox" Margin="3,3,3,1" Panel.ZIndex="42" Text="{Binding Name}" ToolTip="{Binding Path}" MinWidth="60" TextAlignment="Center" />
+                        <ProgressBar VerticalAlignment="Top" Height="4" Background="Transparent" IsIndeterminate="{Binding ExecutionState, Converter={StaticResource IsRunningConverter}}" BorderThickness="0" />
                     </Grid>
                 </DataTemplate>
             </TabControl.ItemTemplate>
