--- a/Source/SizeOnDisk/MainWindow.xaml
+++ b/Source/SizeOnDisk/MainWindow.xaml
@@ -119,7 +119,7 @@
                    Grid.Row="3">
             <StatusBar.Resources>
                 <Style x:Key="{x:Type StatusBarItem}" TargetType="StatusBarItem">
-                    <Setter Property="Padding" Value="3,1,3,2" />
+                    <Setter Property="Padding" Value="4,2,4,3" />
                 </Style>
             </StatusBar.Resources>
             <StatusBar.ItemsPanel>
@@ -157,12 +157,7 @@
                     </Grid>
                 </ItemsPanelTemplate>
             </StatusBar.ItemsPanel>
-            <StatusBarItem>
-                <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <TextBlock Padding="5,1,5,3" Panel.ZIndex="42" Text="{Binding SelectedRootFolder.ExecutionState, Converter={StaticResource IsRunningConverter}, FallbackValue=...}" />
-                    <ProgressBar Background="Transparent" IsIndeterminate="{Binding IsRunning, Converter={StaticResource IsRunningConverter}}" BorderThickness="0" />
-                </Grid>
-            </StatusBarItem>
+            <StatusBarItem Content="{Binding SelectedRootFolder.ExecutionState, Converter={StaticResource IsRunningConverter}, FallbackValue=...}" />
             <Separator Grid.Column="1" />
             <StatusBarItem Grid.Column="2"
                            Content="{Binding SelectedRootFolder.RunTime}" />
@@ -202,6 +197,10 @@
             <StatusBarItem Grid.Column="16"
                            Content="{Binding SelectedRootFolder.SelectedTreeItem.DiskSize, Converter={StaticResource SizeConverter}}"
                            ToolTip="{lex:Loc TotalDiskSize}" />
+            <Separator Grid.Column="17" />
+            <StatusBarItem Grid.Column="18"
+                           Content="{Binding SelectedRootFolder.HardDrivePath}"
+                           ToolTip="{lex:Loc HardDriveUsage}" />
             <Separator Grid.Column="19" />
             <StatusBarItem Grid.Column="20"
                            Content="{Binding SelectedRootFolder.HardDriveUsage,Converter={StaticResource SizeConverter}}"
@@ -215,8 +214,8 @@
         <TabControl ItemsSource="{Binding Folders}" SelectedItem="{Binding SelectedRootFolder}" Margin="1">
             <TabControl.ItemTemplate>
                 <DataTemplate>
-                    <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-7,-2">
-                        <TextBlock Name="Textbox" Margin="3,3,3,1" Panel.ZIndex="42" Text="{Binding Name}" ToolTip="{Binding Path}" MinWidth="60" TextAlignment="Center" />
+                    <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-6,-1">
+                        <TextBlock Name="Textbox" Margin="3,4,3,0" Panel.ZIndex="42" Text="{Binding Name}" ToolTip="{Binding Path}" MinWidth="60" TextAlignment="Center" />
                         <ProgressBar VerticalAlignment="Top" Height="4" Background="Transparent" IsIndeterminate="{Binding ExecutionState, Converter={StaticResource IsRunningConverter}}" BorderThickness="0" />
                     </Grid>
                 </DataTemplate>
@@ -225,7 +224,7 @@
                 <DataTemplate>
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="300" />
+                            <ColumnDefinition Width="275" />
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
