--- a/Source/SizeOnDisk/WindowOptions.xaml
+++ b/Source/SizeOnDisk/WindowOptions.xaml
@@ -6,10 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:lex="http://wpflocalizeextension.codeplex.com"
-        xmlns:engine="http://wpflocalizeextension.codeplex.com"
-        engine:ResxLocalizationProvider.DefaultAssembly="SizeOnDisk"
-        engine:ResxLocalizationProvider.DefaultDictionary="Localization"
-        engine:LocalizeDictionary.DesignCulture="fr"
+        Style="{StaticResource WindowStyle}"
         mc:Ignorable="d" 
         d:DataContext="{d:DesignInstance {x:Type vm:VMOptions}}"
         Title="Options"
