--- a/Source/SizeOnDisk/App.xaml
+++ b/Source/SizeOnDisk/App.xaml
@@ -1,7 +1,7 @@
 <Application x:Class="SizeOnDisk.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml" Startup="Application_Startup">
+             StartupUri="Windows/MainWindow.xaml" Startup="Application_Startup">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
