--- a/Source/SizeOnDisk/Windows/AboutBox.xaml
+++ b/Source/SizeOnDisk/Windows/AboutBox.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SizeOnDisk.AboutBox"
+﻿<Window x:Class="SizeOnDisk.Windows.AboutBox"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="{Binding RelativeSource={RelativeSource Self}, Mode=OneTime, Path=ProductTitle}"
