--- a/Source/SizeOnDisk/Windows/WindowOptions.xaml
+++ b/Source/SizeOnDisk/Windows/WindowOptions.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SizeOnDisk.WindowOptions"
+﻿<Window x:Class="SizeOnDisk.Windows.WindowOptions"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:conv="clr-namespace:SizeOnDisk.Converters"
